--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Adventure time!</title>
 
 <link href='http://fonts.googleapis.com/css?family=Cinzel:400,700' rel='stylesheet' type='text/css'>
-<!-- <link rel="stylesheet" href="css/style.css" type="text/css"> -->
+<link rel="stylesheet" href="css/style.css" type="text/css">
 
 <script type="text/javascript" src="jquery/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="jquery/create-character-process-test.js"></script>
